--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <div class="videowrapper"><iframe width="854" height="480" class="d-block w-100" src="https://www.youtube.com/embed/GvlXyqXq62w" frameborder="0" gesture="media" allowfullscreen alt="Music Videos"> </iframe></div>
+                  <div class="videowrapper"><iframe width="854" height="480" class="d-block w-100" src="https://www.youtube.com/embed/GvlXyqXq62w" frameborder="0" gesture="media" allowfullscreen="true" alt="Music Videos"> </iframe></div>
                 </div>
                 <div class="carousel-item">
-                  <div class="videowrapper"><iframe width="854" height="480" class="d-block w-100" src="https://www.youtube.com/embed/KHXGpRua9Xg" frameborder="0" gesture="media" allowfullscreen alt="Music Videos"> </iframe></div>
+                  <div class="videowrapper"><iframe width="854" height="480" class="d-block w-100" src="https://www.youtube.com/embed/KHXGpRua9Xg" frameborder="0" gesture="media" allowfullscreen="true" alt="Music Videos"> </iframe></div>
                 </div>
                 <div class="carousel-item">
-                  <div class="videowrapper"><iframe width="854" height="480" class="d-block w-100" src="https://www.youtube.com/embed/3v_reo7Scu0" frameborder="0" gesture="media" allowfullscreen alt="Music Videos"> </iframe></div>
+                  <div class="videowrapper"><iframe width="854" height="480" class="d-block w-100" src="https://www.youtube.com/embed/3v_reo7Scu0" frameborder="0" gesture="media" allowfullscreen="true" alt="Music Videos"> </iframe></div>
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
