--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <!-- Icon Webpages -->
     <link rel="icon" href="assets/img/logo-icon.jpg" type="image/jpg" />
 
+    <!-- RSS Feed -->
+    <link rel="alternate" type="application/atom+xml" title="My Portfolio | Hakim Nurubay" href="/feed.xml" />
+
     <title>My Portfolio | Hakim Nurubay</title>
 
     <!-- Begin Jekyll SEO tag v2.6.1 -->
