mengubah wavesnya lagi

--- a/index.html
+++ b/index.html
@@ -199,13 +199,47 @@
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#564641"
+          fill="#f4c4b4"
           fill-opacity="1"
-          d="M0,96L30,106.7C60,117,120,139,180,133.3C240,128,300,96,360,101.3C420,107,480,149,540,165.3C600,181,660,171,720,138.7C780,107,840,53,900,37.3C960,21,1020,43,1080,96C1140,149,1200,235,1260,256C1320,277,1380,235,1410,213.3L1440,192L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"
+          d="M0,64L30,74.7C60,85,120,107,180,122.7C240,139,300,149,360,149.3C420,149,480,139,540,154.7C600,171,660,213,720,218.7C780,224,840,192,900,154.7C960,117,1020,75,1080,74.7C1140,75,1200,117,1260,133.3C1320,149,1380,139,1410,133.3L1440,128L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"
         ></path>
       </svg>
     </section>
     <!-- End Contact -->
+
+    <!-- Subscriptions Email -->
+    <section id="subscriptions">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col">
+            <h2>Subscribe Form</h2>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col col-md-4">
+            <form
+              action="https://feedburner.google.com/fb/a/mailverify?uri=HakimNurubayfeed"
+              method="post"
+              onsubmit="window.open('https://feedburner.google.com/fb/a/mailverify?uri=HakimNurubayfeed', 'popupwindow', 'scrollbars=yes,width=550,height=520');return true"
+              target="popupwindow"
+            >
+              <div class="mb-3">
+                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email Address" aria-describedby="emailHelp" />
+              </div>
+              <center><button type="submit" class="btn btn-primary" style="width: auto">Submit</button></center>
+            </form>
+          </div>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#564641"
+          fill-opacity="1"
+          d="M0,128L26.7,138.7C53.3,149,107,171,160,154.7C213.3,139,267,85,320,64C373.3,43,427,53,480,101.3C533.3,149,587,235,640,250.7C693.3,267,747,213,800,186.7C853.3,160,907,160,960,154.7C1013.3,149,1067,139,1120,144C1173.3,149,1227,171,1280,170.7C1333.3,171,1387,149,1413,138.7L1440,128L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+    <!-- End Subscriptions Email -->
 
     <!-- Footer -->
     <footer class="text-white text-center pb-5" style="background-color: #564641">
