mengubah address subsriptions

--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
         <div class="row justify-content-center">
           <div class="col col-md-4">
             <form
-              action="https://feedburner.google.com/fb/a/mailverify?uri=HakimNurubayfeed"
+              action="https://feedburner.google.com/fb/a/mailverify?uri=HakimNurubay"
               method="post"
-              onsubmit="window.open('https://feedburner.google.com/fb/a/mailverify?uri=HakimNurubayfeed', 'popupwindow', 'scrollbars=yes,width=550,height=520');return true"
+              onsubmit="window.open('https://feedburner.google.com/fb/a/mailverify?uri=HakimNurubay', 'popupwindow', 'scrollbars=yes,width=550,height=520');return true"
               target="popupwindow"
             >
               <div class="mb-3">
