memperbarui kesalahan kata

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <div class="col-md-8">
             <p>
               15 year old Hakim Nurubay (𝓗𝓪𝓴𝓲𝓶) has always had an incredibly large passion for music. has always had an incredibly large passion for music. he's a beginner web programmer, he's like learn new things. he's made a website
-              <a href="https://www.crupuk.com/">Hakim Official</a> pada 2020. you can subscribe him YouTube Channel <a href="https://www.youtube.com/channel/UCScOccW5nDku-ypJc4AW99Q">Hakim Nurubay</a> Thank you for you guys who have
+              <a href="https://www.crupuk.com/">Hakim Official</a> in 2020. you can subscribe him YouTube Channel <a href="https://www.youtube.com/channel/UCScOccW5nDku-ypJc4AW99Q">Hakim Nurubay</a> Thank you for you guys who have
               subscribed to him YouTube Channel.
             </p>
           </div>
