menambahkan efek zoom scale saat mouse di area tsb

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <img src="assets/img/hakimn.jpg" alt="Hakim Nurubay" width="200" class="rounded-circle img-thumbnail" />
+      <img src="assets/img/hakimn.jpg" alt="Hakim Nurubay" width="200" class="rounded-circle img-thumbnail mypicture" />
       <h1 class="display-4">Hakim Nurubay</h1>
       <p class="lead">Artist | Content Creator</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -129,7 +129,7 @@
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-md-6 mb-3">
+          <div class="col-md-6 mb-3 mypicture">
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
