--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark shadow-sm fixed-top" style="background-color: #564641">
       <div class="container">
-        <a class="navbar-brand" href="#">Hakim Nurubay</a>
+        <a class="navbar-brand" href="">Hakim Nurubay</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
