memperbaiki efek parallax

--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
       <img src="assets/img/hakimn.jpg" alt="Hakim Nurubay" width="200" class="rounded-circle img-thumbnail mypicture" />
       <h1 class="display-4">Hakim Nurubay</h1>
       <p class="lead">Artist | Content Creator</p>
+    </section>
+    <section style="background-color: #f4c4b4; padding: 0px">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
@@ -257,6 +259,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <script src="assets/js/script.js"></script>
 
     <script>
       const scriptURL = "https://script.google.com/macros/s/AKfycbxiQ66IibRENk6MvpZg2nma8hkbZ2RSmZE2Lj58AT4Y1vsvyfgjJkB98hWj-8m7d8pY/exec";
