adding some Meta Open Graph

--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@
     <meta property="og:url" content="https://hakimnurubay.github.io" />
     <meta property="og:site_name" content="My Portfolio | Hakim Nurubay" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="assets/img/hakimn.jpg" />
+    <meta property="og:image" content="https://hakimnurubay.github.io/assets/img/hakimn.jpg" />
+
+    <!-- Twitter OG -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="My Portfolio | Hakim Nurubay" />
+    <meta name="twitter:description" content="15 year old Hakim Nurubay (𝓗𝓪𝓴𝓲𝓶) has always had an incredibly large passion for music. has always had an incredibly large passion for music." />
+    <meta name="twitter:image" content="https://hakimnurubay.github.io/assets/img/hakim.jpg" />
+
     <script type="application/ld+json">
       {
         "@type": "WebPage",
