menambahkan beberapa hal

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="assets/css/style.css" />
 
+    <!-- Font Awesome -->
+    <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+
     <!-- Icon Webpages -->
     <link rel="icon" href="assets/img/logo-icon.jpg" type="image/jpg" />
 
@@ -263,6 +266,23 @@
 
     <!-- Footer -->
     <footer class="text-white text-center pb-5" style="background-color: #564641">
+      <div class="container p-4 pb-0">
+        <!-- Section: Social media -->
+        <section class="mb-4">
+          <!-- Facebook -->
+          <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/hakim.nurubay/" target="_blank" role="button"><i class="fa fa-facebook-f"></i></a>
+
+          <!-- Instagram -->
+          <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/hakimn_world/" target="_blank" role="button"><i class="fa fa-instagram"></i></a>
+
+          <!-- YouTube -->
+          <a class="btn btn-outline-light btn-floating m-1" href="https://youtube.com/channel/UCScOccW5nDku-ypJc4AW99Q" rel="nofollow" target="_blank" role="button"><i class="fa fa-youtube"></i></a>
+
+          <!-- WhatsApp -->
+          <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/HakimNurubay" target="_blank" role="button"><i class="fa fa-github"></i></a>
+        </section>
+        <!-- Section: Social media -->
+      </div>
       <p>Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.crupuk.com/" class="text-white fw-bold">Hakim Nurubay</a></p>
     </footer>
     <!-- End Footer -->
