--- a/index.html
+++ b/index.html
@@ -73,23 +73,23 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark shadow-sm fixed-top" style="background-color: #564641">
       <div class="container">
-        <a class="navbar-brand" href="">Hakim Nurubay</a>
+        <a class="navbar-brand font-nav" href="">Hakim Nurubay</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#home">Home</a>
+              <a class="nav-link active font-nav" aria-current="page" href="#home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">About</a>
+              <a class="nav-link font-nav" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#music">Music Videos</a>
+              <a class="nav-link font-nav" href="#music">Music Videos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
+              <a class="nav-link font-nav" href="#contact">Contact</a>
             </li>
           </ul>
         </div>
