--- a/index.html
+++ b/index.html
@@ -192,6 +192,26 @@
     <!-- End Music Video List -->
 
     <!-- Contact -->
+    <section id="instagram-feed">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-12">
+            <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+            <div class="elfsight-app-4a8f860b-80ba-43e8-b8fc-9be38bd5044f"></div>
+          </div>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#f4c4b4"
+          fill-opacity="1"
+          d="M0,64L30,74.7C60,85,120,107,180,122.7C240,139,300,149,360,149.3C420,149,480,139,540,154.7C600,171,660,213,720,218.7C780,224,840,192,900,154.7C960,117,1020,75,1080,74.7C1140,75,1200,117,1260,133.3C1320,149,1380,139,1410,133.3L1440,128L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+    <!-- End Contact -->
+
+    <!-- Contact -->
     <section id="contact">
       <div class="container">
         <div class="row text-center mb-3">
@@ -206,17 +226,19 @@
               <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
             <form name="my-portfolio-contact-form">
-              <div class="mb-3">
-                <label for="name" class="form-label">Name</label>
-                <input type="text" class="form-control" id="name" aria-describedby="name" name="name" required />
+              <div class="row g-3">
+                <div class="col mb-3">
+                  <input type="text" class="form-control" id="name" aria-describedby="name" name="name" placeholder="Name" required />
+                </div>
+                <div class="col mb-3">
+                  <input type="email" class="form-control" id="email" aria-describedby="email" name="email" placeholder="Email" required />
+                </div>
               </div>
               <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" aria-describedby="email" name="email" required />
+                <input type="text" class="form-control" id="subject" aria-describedby="email" name="subject" placeholder="Subject" required />
               </div>
               <div class="mb-3">
-                <label for="message" class="form-label">Message</label>
-                <textarea class="form-control" id="message" rows="3" name="message" required></textarea>
+                <textarea class="form-control" id="message" rows="3" name="message" placeholder="Type your message here..." required></textarea>
               </div>
               <button type="submit" class="btn text-white btn-send" style="background-color: #564641">Submit</button>
               <button class="btn text-white btn-loading d-none" style="background-color: #564641" type="button" disabled>
@@ -229,9 +251,9 @@
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="#f4c4b4"
-          fill-opacity="1"
-          d="M0,64L30,74.7C60,85,120,107,180,122.7C240,139,300,149,360,149.3C420,149,480,139,540,154.7C600,171,660,213,720,218.7C780,224,840,192,900,154.7C960,117,1020,75,1080,74.7C1140,75,1200,117,1260,133.3C1320,149,1380,139,1410,133.3L1440,128L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"
+          fill="#ffffff"
+          fill-opacity="10"
+          d="M0,192L30,208C60,224,120,256,180,245.3C240,235,300,181,360,181.3C420,181,480,235,540,261.3C600,288,660,288,720,272C780,256,840,224,900,218.7C960,213,1020,235,1080,245.3C1140,256,1200,256,1260,250.7C1320,245,1380,235,1410,229.3L1440,224L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"
         ></path>
       </svg>
     </section>
