--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css" />
 
+    <!-- AOS -->
+    <link href="assets/css/aos.css" rel="stylesheet" />
+
     <!-- My CSS -->
     <link rel="stylesheet" href="assets/css/style.css" />
 
@@ -101,7 +104,7 @@
     <section class="jumbotron text-center">
       <img src="assets/img/hakimn.jpg" alt="Hakim Nurubay" width="200" class="rounded-circle img-thumbnail mypicture" />
       <h1 class="display-4">Hakim Nurubay</h1>
-      <p class="lead">Artist | Content Creator</p>
+      <p class="lead" data-aos="zoom-in" data-aos-delay="1000" data-aos-once="true">Artist | Content Creator</p>
     </section>
     <section style="background-color: #f4c4b4; padding: 0px">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -123,7 +126,7 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-8">
+          <div class="col-md-8" data-aos="fade-up" data-aos-delay="100" data-aos-once="true">
             <p>
               15 year old Hakim Nurubay (𝓗𝓪𝓴𝓲𝓶) has always had an incredibly large passion for music. has always had an incredibly large passion for music. he's a beginner web programmer, he's like learn new things. he's made a website
               <a href="https://www.crupuk.com/">Hakim Official</a> in 2020. you can subscribe him YouTube Channel <a href="https://www.youtube.com/channel/UCScOccW5nDku-ypJc4AW99Q">Hakim Nurubay</a> Thank you for you guys who have
@@ -151,7 +154,7 @@
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-md-6 mb-3 mypicture">
+          <div class="col-md-6 mb-3 mypicture" data-aos="fade-down" data-aos-delay="300" data-aos-once="true">
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -318,6 +321,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="assets/js/aos.js"></script>
 
     <script src="assets/js/script.js"></script>
 
@@ -342,6 +346,10 @@
           })
           .catch((error) => console.error("Error!", error.message));
       });
+    </script>
+
+    <script>
+      AOS.init();
     </script>
   </body>
 </html>
