--- a/index.html
+++ b/index.html
@@ -172,27 +172,27 @@
                 <div class="owl-carousel owl-theme">
 
                     <div class="item">
-                        <div class="videowrapper"><iframe class="d-block w-100" src="https://www.youtube.com/embed/GvlXyqXq62w" frameborder="0" gesture="media" allowfullscreen="true" alt="Music Videos"> </iframe></div>
+                        <div class="embed-responsive embed-responsive-16by9 videowrapper"><iframe class="embed-responsive-item d-block w-100" src="https://www.youtube.com/embed/GvlXyqXq62w" frameborder="0" gesture="media" allowfullscreen="true" alt="Music Videos"> </iframe></div>
                     </div>
 
                     <div class="item">
-                        <div class="videowrapper"><iframe class="d-block w-100" src="https://www.youtube.com/embed/KHXGpRua9Xg" frameborder="0" gesture="media" allowfullscreen="true" alt="Music Videos"> </iframe></div>
+                        <div class="embed-responsive embed-responsive-16by9 videowrapper"><iframe class="embed-responsive-item d-block w-100" src="https://www.youtube.com/embed/KHXGpRua9Xg" frameborder="0" gesture="media" allowfullscreen="true" alt="Music Videos"> </iframe></div>
                     </div>
 
                     <div class="item">
-                        <div class="videowrapper"><iframe class="d-block w-100" src="https://www.youtube.com/embed/3v_reo7Scu0" frameborder="0" gesture="media" allowfullscreen="true" alt="Music Videos"> </iframe></div>
+                        <div class="embed-responsive embed-responsive-16by9 videowrapper"><iframe class="embed-responsive-item d-block w-100" src="https://www.youtube.com/embed/3v_reo7Scu0" frameborder="0" gesture="media" allowfullscreen="true" alt="Music Videos"> </iframe></div>
                     </div>
 
                     <div class="item">
-                        <div class="videowrapper"><iframe class="d-block w-100" src="https://www.youtube.com/embed/i-hhRG1Z06g" frameborder="0" gesture="media" allowfullscreen="true" alt="Music Videos"> </iframe></div>
+                        <div class="embed-responsive embed-responsive-16by9 videowrapper"><iframe class="embed-responsive-item d-block w-100" src="https://www.youtube.com/embed/i-hhRG1Z06g" frameborder="0" gesture="media" allowfullscreen="true" alt="Music Videos"> </iframe></div>
                     </div>
                     
                     <div class="item">
-                        <div class="videowrapper"><iframe class="d-block w-100" src="https://www.youtube.com/embed/tAyFJjbSlw0" frameborder="0" gesture="media" allowfullscreen="true" alt="Music Videos"> </iframe></div>
+                        <div class="embed-responsive embed-responsive-16by9 videowrapper"><iframe class="embed-responsive-item d-block w-100" src="https://www.youtube.com/embed/tAyFJjbSlw0" frameborder="0" gesture="media" allowfullscreen="true" alt="Music Videos"> </iframe></div>
                     </div>
 
                     <div class="item">
-                        <div class="videowrapper"><iframe class="d-block w-100" src="https://www.youtube.com/embed/WV_l_kFDCnw" frameborder="0" gesture="media" allowfullscreen="true" alt="Music Videos"> </iframe></div>
+                        <div class="embed-responsive embed-responsive-16by9 videowrapper"><iframe class="embed-responsive-item d-block w-100" src="https://www.youtube.com/embed/WV_l_kFDCnw" frameborder="0" gesture="media" allowfullscreen="true" alt="Music Videos"> </iframe></div>
                     </div>
 
                 </div>
