--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
       </div>
 
       <div class="container">
-        <div class="copyright">Copyright &copy; <script>document.write(new Date().getFullYear())</script> <strong>Hakim Nurubay</strong>. All Rights Reserved</div>
+        <div class="copyright">&copy; <script>document.write(new Date().getFullYear())</script> <strong>Hakim Nurubay</strong>. All Rights Reserved</div>
         <div class="credits">
           Designed by <a href="https://www.crupuk.com/">Hakim Nurubay</a>
         </div>
