--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             </div>
             <div class="news-wrap">
                 <center>
-                    <div id="instafeed" class="img-hover-zoom row row-cols-1 row-cols-sm-2 row-cols-md-3 gallery news-item img-fluid" data-aos="fade-up" data-aos-delay="100"></div>
+                    <div id="instafeed" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 gallery news-item img-fluid" data-aos="fade-up" data-aos-delay="100"></div>
                     <p>
                         <div class="btn btn-primary btn-sm loadmore">Load More</div>
                     </p>
