--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <meta name="author" content="Hakim Nurubay" />
     <meta property="og:locale" content="en_US" />
     <meta name="description" content="15 year old Hakim Nurubay (𝓗𝓪𝓴𝓲𝓶) has always had an incredibly large passion for music. has always had an incredibly large passion for music." />
+    <meta name="keywords" content="Hakim Nurubay, Hakim, Hakim Nurubay github, liliana tani, lovelylululana, hakimn_world">
     <meta property="og:description" content="15 year old Hakim Nurubay (𝓗𝓪𝓴𝓲𝓶) has always had an incredibly large passion for music. has always had an incredibly large passion for music." />
     <link rel="canonical" href="https://hakimnurubay.github.io/" />
     <meta property="og:url" content="https://hakimnurubay.github.io" />
@@ -272,6 +273,23 @@
           </div>
       </section>
       <!-- End Contact Me -->
+
+      <!-- Newsletter -->
+      <section id="newsletter">
+        <div class="style-newsletter">
+          <div class="container">
+            <div class="row justify-content-center">
+              <div class="col-lg-6">
+                <h4>Newsletter</h4>
+                <form action="https://feedburner.google.com/fb/a/mailverify?uri=HakimNurubay" method="post">
+                  <input type="email" name="email"><input type="submit" value="Subscribe">
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End Newsletter -->
 
     </main>
     <!-- End #main -->
