--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-6">
                 <h4>Newsletter</h4>
-                <form action="https://feedburner.google.com/fb/a/mailverify?uri=HakimNurubay" method="post">
+                <form action="https://feedburner.google.com/fb/a/mailverify?uri=HakimNurubay" method="post" target="popupwindow">
                   <input type="email" name="email"><input type="submit" value="Subscribe">
                 </form>
               </div>
