--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <!-- RSS Feed -->
     <link rel="alternate" type="application/atom+xml" title="My Portfolio | Hakim Nurubay" href="/feed.xml" />
 
+    <!-- Google Webmaster -->
+    <meta name="google-site-verification" content="h4Cvlrh60cZa3856YMfkFDekViIzXdOvV4wyOxQvbYI" />
+
     <!-- Vendor CSS Files -->
     <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
