change gamer to gamers

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   
                 <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
                   <div class="icon"><i class="bi bi-controller"></i></div>
-                  <h4 class="title">Gamer</h4>
+                  <h4 class="title">Gamers</h4>
                   <p class="description">besides that I'm also good at playing games, and I playing some games either.</p>
                 </div>
               </div>
