just a little change

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   
                 <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
                   <div class="icon"><i class="bi bi-laptop"></i></div>
-                  <h4 class="title"><a href="">UI/UX Designer</a></h4>
+                  <h4 class="title">UI/UX Designer</h4>
                   <p class="description">I love to Design, and I love to be UI/UX Designer either.</p>
                 </div>
   
