give border radius

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 <center>
                     <div id="instafeed" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 gallery news-item img-fluid" data-aos="fade-up" data-aos-delay="100"></div>
                     <p>
-                        <div class="btn btn-primary btn-sm loadmore">Load More</div>
+                        <div class="btn btn-primary btn-sm loadmore buttongram">Load More</div>
                     </p>
                 </center>
             </div>
