--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <div class="news-wrap">
                 <center>
                   <div class="container">	
-                    <div id="instagram-feed-demo" class="instagram_feed"></div>
+                    <div id="instagram-feeds" class="instagram_feed"></div>
                   </div>
 
                     <div id="instafeed" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 gallery news-item img-fluid" data-aos="fade-up" data-aos-delay="100"></div>
@@ -341,7 +341,7 @@
          $(window).on('load', function(){
            $.instagramFeed({
              'username': 'hakimn_world',
-             'container': "#instagram-feed-demo",
+             'container': "#instagram-feeds",
              'display_profile': true,
              'display_biography': true,
              'display_gallery': false,
