No caption on latest update

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <meta name="author" content="Hakim Nurubay" />
     <meta property="og:locale" content="en_US" />
     <meta name="description" content="15 year old Hakim Nurubay (𝓗𝓪𝓴𝓲𝓶) has always had an incredibly large passion for music. has always had an incredibly large passion for music." />
-    <meta name="keywords" content="Hakim Nurubay, Hakim, Hakim Nurubay github, liliana tani, lovelylululana, hakimn_world">
+    <meta name="keywords" content="Hakim Nurubay, Hakim, Hakim Nurubay github, liliana tani, lovelylululana, hakimn_world, crupuk">
     <meta property="og:description" content="15 year old Hakim Nurubay (𝓗𝓪𝓴𝓲𝓶) has always had an incredibly large passion for music. has always had an incredibly large passion for music." />
     <link rel="canonical" href="https://hakimnurubay.github.io/" />
     <meta property="og:url" content="https://hakimnurubay.github.io" />
