--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <div class="row counters justify-content-center">
 
             <div class="col-lg-3 col-6 text-center">
-              <span data-purecounter-start="0" data-purecounter-end="11" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="14" data-purecounter-duration="1" class="purecounter"></span>
               <p>Music Cover</p>
             </div>
 
@@ -174,6 +174,10 @@
             </div>
             <div class="carousel-wrap">
                 <div class="owl-carousel owl-theme">
+
+                    <div class="item">
+                        <div class="videowrapper"><iframe class="d-block w-100" src="https://www.youtube.com/embed/SjvfrZdlGM8" frameborder="0" gesture="media" allowfullscreen="true" alt="Music Videos"> </iframe></div>
+                    </div>
 
                     <div class="item">
                         <div class="videowrapper"><iframe class="d-block w-100" src="https://www.youtube.com/embed/GvlXyqXq62w" frameborder="0" gesture="media" allowfullscreen="true" alt="Music Videos"> </iframe></div>
