--- a/index.html
+++ b/index.html
@@ -216,16 +216,14 @@
                 <h3 class="section-title">Follow me on Instagram</h3> 
             </div>
             <div class="news-wrap">
-                <center>
                   <div class="container">	
                     <div id="instagram-feeds" class="instagram_feed"></div>
                   </div>
 
-                    <div id="instafeed" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 gallery news-item img-fluid" data-aos="fade-up" data-aos-delay="100"></div>
+                    <div id="instafeed" class="gallery news-item" data-aos="fade-up" data-aos-delay="100"></div>
                     <p>
                         <div class="btn btn-primary btn-sm loadmore buttongram">Load More</div>
                     </p>
-                </center>
             </div>
         </div>
       </section>
