--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
              'container': "#instagram-feeds",
              'display_profile': true,
              'display_biography': true,
-             'display_gallery': false,
+             'display_gallery': true,
              'get_raw_json': false,
              'callback': null,
              'styling': true,
