--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
                   <div class="icon"><i class="bi bi-controller"></i></div>
                   <h4 class="title">Gamers</h4>
-                  <p class="description">besides that I'm also good at playing games, and I playing some games either.</p>
+                  <p class="description">Besides that I'm also good at playing games, and I playing some games either.</p>
                 </div>
               </div>
   
@@ -153,7 +153,7 @@
           <div class="row counters justify-content-center">
 
             <div class="col-lg-3 col-6 text-center">
-              <span data-purecounter-start="0" data-purecounter-end="14" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="16" data-purecounter-duration="1" class="purecounter"></span>
               <p>Music Cover</p>
             </div>
 
@@ -347,7 +347,7 @@
              'container': "#instagram-feeds",
              'display_profile': true,
              'display_biography': true,
-             'display_gallery': true,
+             'display_gallery': false,
              'get_raw_json': false,
              'callback': null,
              'styling': true,
