there is bug Instafeed.js

--- a/index.html
+++ b/index.html
@@ -357,6 +357,7 @@
             items: 36,
             items_per_row: 4,
             lazy_load: true,
+            image_size: 640,
             margin: 0.3,
             cdnUrlResolver: function (url) {
               return "https://worker.crupuk.com/" + url;
